--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-	"name": "bit3/contao-dependency-container",
-	"description": "Dependency container based on pimple for Contao open source cms.",
-	"keywords": ["contao", "dependency", "container", "di", "injection"],
+	"name": "bit3/contao-dependency-container-inspector",
+	"description": "Inspector for the dependency container for Contao open source cms.",
+	"keywords": ["contao", "dependency container", "inspector"],
 	"type": "contao-module",
 	"license": "LGPL-3.0+",
 	"authors": [
@@ -14,27 +14,29 @@
 	],
 	"support": {
 		"email": "info@bit3.de",
-		"issues": "https://github.com/bit3/contao-dependency-container/issues",
+		"issues": "https://github.com/bit3/contao-dependency-container-inspector/issues",
 		"wiki": "http://de.contaowiki.org/Dependency_Container",
 		"irc": "irc://irc.freenode.org/contao.dev",
-		"source": "https://github.com/bit3/contao-dependency-container"
+		"source": "https://github.com/bit3/contao-dependency-container-inspector"
 	},
 	"require": {
 		"php": ">=5.3",
-		"contao/core": ">=2.11",
+		"bit3/contao-dependency-container": "*",
 		"contao-community-alliance/composer-installer": "*",
-		"pimple/pimple": "~1",
 		"bit3/contao-twig": "~1"
+	},
+	"conflict": {
+		"bit3/contao-dependency-container": "<1.2"
 	},
 	"autoload": {
 		"psr-0": {
-			"DependencyInjection": "src/"
+			"DependencyInjection\\Inspector": "src/"
 		}
 	},
 	"extra": {
 		"contao": {
 			"sources": {
-				"contao": "system/modules/dependency-container"
+				"contao": "system/modules/dependency-container-inspector"
 			}
 		},
 		"branch-alias": {
